fixed footer nav line height on mobile

--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -8,7 +8,6 @@ footer
       font-family: Arial, san-serif
       font-size: 1em
       font-weight: 900
-      line-height: var(--line-height-hed)
       text-transform: uppercase
       color: var(--color-half)
       a:link, a:visited
@@ -22,7 +21,6 @@ footer
     ul
       li
         font-size: var(--shim-n)
-        line-height: 1
 
 //-----------------------------------------------------------------------------
 
@@ -35,3 +33,5 @@ footer
       flex-flow: row wrap
       align-items: center
       gap: 0.5em
+      li
+        line-height: 1
